--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,7 @@
             "default_value": "foo"
         }
     },
-    "default_result_folder_downloadable_path": "/demo_quick_start_0"
+    "default_result_folder_downloadable_path": "/demo_quick_start_0",
+    "supported_hpc": ["local_hpc","keeling_community"],
+    "default_hpc": "local_hpc"
 }
